--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,27 @@ logs/debug.log
 
 tmp/*
 tmp/cache/models/empty
+
+tmp/cache/models/empty
+
+tmp/cache/models/myapp_cake_model_debug_kit_panels
+
+src/Template/Apis/json/test.ctp
+
+tmp/cache/models/myapp_cake_model_debug_kit_requests
+
+tmp/cache/persistent/empty
+
+tmp/cache/persistent/myapp_cake_core_translations_cake_en__u_s
+
+tmp/cache/persistent/myapp_cake_core_translations_debug_kit_en__u_s
+
+tmp/cache/persistent/myapp_cake_core_translations_default_en__u_s
+
+tmp/cache/views/empty
+
+tmp/debug_kit.sqlite
+
+tmp/sessions/empty
+
+tmp/tests/empty
